# am-i-in-debt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release-macos-arm.yml
docs/: PRODUCT.md  RULES.md  TECHNICAL.md
get-cookies-script/: package.json  tsconfig.json
get-cookies-script/src/: chrome.ts  index.ts  kimi.ts  logger.ts  zhipu.ts
scripts/: build-sidecar.sh
src/: main.ts
src-tauri/: Cargo.toml  ICON.md  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  login.rs  main.rs  menu.rs  provider.rs  provider_switch.rs  state.rs
src-tauri/src/api/: kimi.rs  mod.rs  zhipu.rs
src-tauri/src/models/: kimi.rs  mod.rs  zhipu.rs
src-tauri/src/providers/: README.md  kimi.rs  mod.rs  zhipu.rs
